src/objects/Recruiting_Spec__c.object
<CustomObject>
    <fields>
        <fullName>Admin_Notes__c</fullName>
        <label>Admin Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agency_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agency Involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Budget_for_Recruiter__c</fullName>
        <label>Approved Budget for Recruiter</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales: BDR General</fullName>
                </value>
                <value>
                    <fullName>Sales: BDR EMEA</fullName>
                </value>
                <value>
                    <fullName>Sales: Velocity</fullName>
                </value>
                <value>
                    <fullName>Sales: Enterprise</fullName>
                </value>
                <value>
                    <fullName>Sales: Globals</fullName>
                </value>
                <value>
                    <fullName>Sales: Sales Engineer</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Customer Success</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>G&amp;A: Strategy &amp; Ops</fullName>
                </value>
                <value>
                    <fullName>G&amp;A: Finance</fullName>
                </value>
                <value>
                    <fullName>G&amp;A: HR &amp; Recruiting</fullName>
                </value>
                <value>
                    <fullName>G&amp;A: Misc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate_Start_Date__c</fullName>
        <label>Candidate Start Date</label>
        <summarizedField>Recruiting_Candidate__c.Start_Date__c</summarizedField>
        <summaryForeignKey>Recruiting_Candidate__c.Recruiting_Spec__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Date Expired</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coordinator__c</fullName>
        <label>Coordinator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adam Pasti</fullName>
                </value>
                <value>
                    <fullName>Andrew Lane</fullName>
                </value>
                <value>
                    <fullName>Brigid Doulin</fullName>
                </value>
                <value>
                    <fullName>Federika Cariati</fullName>
                </value>
                <value>
                    <fullName>Lila Haffey</fullName>
                </value>
                <value>
                    <fullName>Megan Griffin</fullName>
                </value>
                <value>
                    <fullName>Michelle Tuzio</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Rachel Murray</fullName>
                </value>
                <value>
                    <fullName>Veronica Curran</fullName>
                </value>
                <value>
                    <fullName>Zach Choquette</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Filled__c</fullName>
        <label>Date Filled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF( CONTAINS(Status__c,&quot;Open&quot;),TODAY()- Open_Date__c , 
IF( CONTAINS(Status__c,&quot;Filled&quot;), Date_Filled__c - Open_Date__c , 
Close_Date__c - Open_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deadline_Period__c</fullName>
        <formula>IF(MONTH(TODAY())=MONTH( Deadline__c ),1,
IF(AND(MONTH(TODAY())!=MONTH( Deadline__c ), Quarter_of_Deadline__c = Today_Quarter__c ),2,
IF(AND(Quarter_of_Deadline__c != Today_Quarter__c ,YEAR(TODAY())=YEAR( Deadline__c )),3,
4)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deadline Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Experience_Level__c</fullName>
        <label>Experience Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entry</fullName>
                </value>
                <value>
                    <fullName>Mid</fullName>
                </value>
                <value>
                    <fullName>Senior</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <label>Hiring Manager</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interview_Team__c</fullName>
        <label>Interview Team</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>White Plains</fullName>
                </value>
                <value>
                    <fullName>NYC</fullName>
                </value>
                <value>
                    <fullName>UK (Reading)</fullName>
                </value>
                <value>
                    <fullName>Toronto</fullName>
                </value>
                <value>
                    <fullName>Other (NorthAm)</fullName>
                </value>
                <value>
                    <fullName>Other (EMEA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Candidates_Hired__c</fullName>
        <label>Number of Candidates Hired</label>
        <summaryFilterItems>
            <field>Recruiting_Candidate__c.Status__c</field>
            <operation>equals</operation>
            <value>7 - Offer Accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>Recruiting_Candidate__c.Recruiting_Spec__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Hires_to_Target__c</fullName>
        <formula>Target_Hires__c  - Number_of_Candidates_Hired__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Hires to Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Hold_Date__c</fullName>
        <description>To identify the date that the business decided to pause on a headcount req</description>
        <inlineHelpText>To identify the date that the business decided to pause on a headcount req</inlineHelpText>
        <label>On Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quarter_of_Deadline__c</fullName>
        <formula>CASE(MONTH( Deadline__c ),1,1,2,1,3,1,4,2,5,2,6,2,7,3,8,3,9,3,10,4,11,4,12,4,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter of Deadline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recruiter_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recruiter Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recruiter__c</fullName>
        <label>Recruiter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adam Pasti</fullName>
                </value>
                <value>
                    <fullName>Brigid Doulin</fullName>
                </value>
                <value>
                    <fullName>Ed Morris</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Jen Russell</fullName>
                </value>
                <value>
                    <fullName>Kara Gilbert</fullName>
                </value>
                <value>
                    <fullName>Larry Jacobson</fullName>
                </value>
                <value>
                    <fullName>Lila Haffey</fullName>
                </value>
                <value>
                    <fullName>Nick Picardi</fullName>
                </value>
                <value>
                    <fullName>Stacey Schmidt</fullName>
                </value>
                <value>
                    <fullName>Zach Choquette</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruiting_Spec_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recruiting Spec Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_To__c</fullName>
        <label>Report To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Researcher__c</fullName>
        <label>Researcher</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adam Pasti</fullName>
                </value>
                <value>
                    <fullName>Andrew Lane</fullName>
                </value>
                <value>
                    <fullName>Brigid Doulin</fullName>
                </value>
                <value>
                    <fullName>Federika Cariati</fullName>
                </value>
                <value>
                    <fullName>Kara Gilbert</fullName>
                </value>
                <value>
                    <fullName>Lila Haffey</fullName>
                </value>
                <value>
                    <fullName>Megan Griffin</fullName>
                </value>
                <value>
                    <fullName>Michelle Tuzio</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Rachel Murray</fullName>
                </value>
                <value>
                    <fullName>Veronica Curran</fullName>
                </value>
                <value>
                    <fullName>Zach Choquette</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resume_Date__c</fullName>
        <description>To identify the date that the business decided to resume a paused headcount req</description>
        <inlineHelpText>To identify the date that the business decided to resume a paused headcount req</inlineHelpText>
        <label>Resume Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salary_Guideline__c</fullName>
        <label>Salary Guideline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sourcer__c</fullName>
        <label>Sourcer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adam Pasti</fullName>
                </value>
                <value>
                    <fullName>Andrew Lane</fullName>
                </value>
                <value>
                    <fullName>Brigid Doulin</fullName>
                </value>
                <value>
                    <fullName>Federika Cariati</fullName>
                </value>
                <value>
                    <fullName>Lila Haffey</fullName>
                </value>
                <value>
                    <fullName>Megan Griffin</fullName>
                </value>
                <value>
                    <fullName>Michelle Tuzio</fullName>
                </value>
                <value>
                    <fullName>Rachel Murray</fullName>
                </value>
                <value>
                    <fullName>Veronica Curran</fullName>
                </value>
                <value>
                    <fullName>Zach Choquette</fullName>
                </value>
                <value>
                    <fullName>BDR Team</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Reflects date by which offer should be accepted, not date by which hired candidate should begin</description>
        <label>Fill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( Open_Date__c &gt; TODAY(),&quot;Planned&quot;,
IF( Number_of_Hires_to_Target__c &lt;=0,&quot;Closed - Filled&quot;,
IF(Close_Date__c &lt;= TODAY(),&quot;Closed - Expired&quot;,
IF(AND( Number_of_Hires_to_Target__c &gt;0,   Start_Date__c &gt;= TODAY()),&quot;Open - On Schedule&quot;,
IF(AND( Number_of_Hires_to_Target__c &gt;0, Start_Date__c &lt; TODAY()),&quot;Open - Overdue&quot;,&quot;Open - On Schedule&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Hires__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Target Hires</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Today_Quarter__c</fullName>
        <formula>CASE(MONTH(TODAY()),1,1,2,1,3,1,4,2,5,2,6,2,7,3,8,3,9,3,10,4,11,4,12,4,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Recruiting Spec</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Hiring_Manager__c</columns>
        <columns>Report_To__c</columns>
        <columns>Location__c</columns>
        <columns>Target_Hires__c</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Recruiting Spec Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruiting Specs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Only_VMT_Admins_Can_Make_Changes</fullName>
        <active>false</active>
        <description>Only HR or SF Admins may this record.</description>
        <errorConditionFormula>OR($UserRole.Name &lt;&gt; &quot;VMT SF admin&quot;,
 $User.Full_Name__c &lt;&gt; &quot;Chris McMahon&quot;)</errorConditionFormula>
        <errorMessage>Only Sales Ops or HR  may edit Recruiting Specs. Email salesops@vmturbo.com for questions.</errorMessage>
    </validationRules>
</CustomObject>